k8s/budget/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: budget
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: appsettings-secret
          secret:
            secretName: budget-backend
      containers:
        - name: backend
          image: registry.timo-hermans.nl/budget-api:2026.3.27.21
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
