k8s/budget/backend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: budget
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`budget-api.timo-hermans.nl`)
      # middleware:
      # - name: backend-cors
      #   namespace: budget
      services:
        - name: backend-budget
          port: 80
  tls:
    certResolver: default
    domains:
      - main: budget-api.timo-hermans.nl
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: backend-cors
#   namespace: budget
# spec:
#   headers:
#     accessControlAllowMethods:
#       - GET
#       - POST
#       - PUT
#       - DELETE
#       - OPTIONS
#     accessControlAllowOriginList:
#       - https://budget2.timo-hermans.nl
#       - https://budget.timo-hermans.nl
#     accessControlAllowHeaders:
#       - "*"
#     accessControlMaxAge: 86400
